# weightedInstrFreq

./: CMakeLists.txt  README.md  WeightedInstrFreqPass.dylib  a.out  build.sh  package-lock.json  package.json  run.sh  server.js
documentation/: DESIGN.md  EVALUATION.md  IMPLEMENTATION.md
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
output/: test1_output.txt  test2_output.txt  test3_output.txt  test4_output.txt  test5_output.txt  test6_output.txt  test7_output.txt
src/: PassPlugin.cpp  WeightedInstrFreq.cpp  WeightedInstrFreq.h
tests/: test1.ll  test10.c  test2.ll  test3.ll  test4.c  test4.ll  test5.ll  test6.ll  test7.ll  test8.ll  test9.c
